# demo-top-twin

./: .gitignore  Cargo.toml  README.md
.vim/: coc-settings.json
resources/config/: display.ron  ingame_bindings.ron  menu_bindings.ron
resources/levels/: level.map
resources/settings/: camera.ron  enemy.ron  level.ron  player.ron
resources/spritesheets/: spritesheet.ron
resources/ui/: main_menu.ron
src/: init.rs  main.rs
src/components/: health.rs  health_display.rs  mod.rs
src/init/: init_game_data.rs  mod.rs
src/input/: ingame_bindings.rs  menu_bindings.rs
src/level_loader/: block.rs  mod.rs
src/resources/: collision_tag.rs  font_handles.rs  mod.rs
src/settings/: camera_settings.rs  enemy_settings.rs  level_settings.rs  mod.rs  player_settings.rs
src/states/: ingame.rs  main_menu.rs  mod.rs  startup.rs
src/states/ingame/: init_camera.rs  init_player.rs  mod.rs
src/systems/: control_player.rs  display_health.rs  mod.rs
